--- a/index.html
+++ b/index.html
@@ -1,1 +1,36 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="description" content="area and circumference from diameter calculator">
+    <meta name="keywords" content="ics2o, ross">
+    <meta name="author" content="Ross Wen">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
+    <link rel="manifest" href="site.webmanifest" />
+    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+    <title>PHP Form</title>
+  </head>
 
+  <body>
+    <center>
+      <h1>Input Username:</h1>
+      <!-- Textfield with Floating Label -->
+      <form action="https://tkinson.net/ics2o/handler.php" method="post">
+        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+          <label class="mdl-textfield__label" for="userName">Username</label>
+          <input class="mdl-textfield__input" type="text" name="userName">
+        </div>
+        <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" type="submit" >
+          Submit
+        </button>
+      </form>
+    </center>
+
+  </body>
+  
+</html>
