--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
     <link rel="manifest" href="site.webmanifest" />
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-    <title>PHP Form</title>
+    <title>Area and Circumference</title>
   </head>
 
   <body>
     <center>
-      <h1>Input Username:</h1>
+      <h1>Input Diameter</h1>
       <!-- Textfield with Floating Label -->
-      <form action="https://tkinson.net/ics2o/handler.php" method="post">
+      <form action="https://github.com/ross-wen/Assignment2b-php/blob/main/handler.php" method="post">
         <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-          <label class="mdl-textfield__label" for="userName">Username</label>
-          <input class="mdl-textfield__input" type="text" name="userName">
+          <label class="mdl-textfield__label" for="diameter">Diameter</label>
+          <input class="mdl-textfield__input" type="float" name="diameter">
         </div>
         <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" type="submit" >
           Submit
