--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <center>
       <h1>Input Diameter</h1>
       <!-- Textfield with Floating Label -->
-      <form action="https://github.com/ross-wen/Assignment2b-php/blob/main/handler.php" method="post">
+      <form action="handler.php" method="post">
         <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
           <label class="mdl-textfield__label" for="diameter">Diameter</label>
           <input class="mdl-textfield__input" type="float" name="diameter">
