--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <form action="handler.php" method="post">
         <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
           <label class="mdl-textfield__label" for="diameter">Diameter</label>
-          <input class="mdl-textfield__input" type="float" name="diameter">
+          <input class="mdl-textfield__input" type="text" name="diameter">
         </div>
         <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" type="submit" >
           Submit
