--- a/index.html
+++ b/index.html
@@ -25,16 +25,13 @@
         </div>
         <div class="mdl-layout__tab-bar mdl-js-ripple-effect mdl-color--primary-dark">
           <a href="#calculator" class="mdl-layout__tab is-active">Calculator</a>
-          <button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored mdl-shadow--4dp mdl-color--accent" id="add">
-            <i class="material-icons" role="presentation">add</i>
-            <span class="visuallyhidden">Add</span>
-          </button>
         </div>
       </header>
     </div>
     <main class="mdl-layout__content">
       <div class="mdl-layout__tab-panel is-active" id="calculator">
-        <h1>Input Diameter</h1>
+        <section class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--2dp">
+          <h1>Input Diameter</h1>
         <!-- Textfield with Floating Label -->
         <form action="handler.php" method="post">
           <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
@@ -45,6 +42,7 @@
             Submit
           </button>
         </form>
+        </section>
       </div>
     </main>
   </body>
