--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <main class="mdl-layout__content">
       <div class="mdl-layout__tab-panel is-active" id="calculator">
         <section class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--2dp">
-          <div class="mdl-card mdl-cell mdl-cell--9-col-desktop mdl-cell--6-col-tablet mdl-cell--4-col-phone">
+          <div class="mdl-cell mdl-cell--4-col">
             <div class="mdl-card__supporting-text">
               <h1>Input Diameter</h1>
             </div>
